force-app/main/default/objects/HAM_HQ_Staging__c/HAM_HQ_Staging__c.object-meta.xml
<CustomObject>
    <label>HAM HQ Staging</label>
    <nameField>
        <displayFormat>HQ-{000000}</displayFormat>
        <label>HAM HQ Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM HQ Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>