force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store the Constituents whose staging details are here</description>
    <inlineHelpText>Store the Constituents whose staging details are here</inlineHelpText>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM HQ Stagings</relationshipLabel>
    <relationshipName>HAM_HQ_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>