force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>HAM_Degree_Code__c</fullName>
    <description>This allows to store the ID of Degree code or the text if we are missing some</description>
    <inlineHelpText>This allows to store the ID of Degree code or the text if we are missing some</inlineHelpText>
    <label>Degree Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>