force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_Degree_Conferred_Year__c.field-meta.xml
<CustomField>
    <fullName>HAM_Degree_Conferred_Year__c</fullName>
    <description>The year the grad school degree was conferred</description>
    <inlineHelpText>The year the grad school degree was conferred</inlineHelpText>
    <label>Degree Conferred Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>