force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Processed__c</fullName>
    <description>Once the Degree record is created this flag is set</description>
    <formula>NOT(ISBLANK( HAM_Degree_Information__c ))</formula>
    <inlineHelpText>Once the Degree record is created this flag is set</inlineHelpText>
    <label>HAM Is Processed</label>
    <type>Checkbox</type>
</CustomField>