force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_is_Ready_for_Processing__c.field-meta.xml
<CustomField>
    <fullName>HAM_is_Ready_for_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will trigger the flow when set to TRUE so that actual record can be created.</description>
    <inlineHelpText>This field will trigger the flow when set to TRUE so that actual record can be created.</inlineHelpText>
    <label>HAM is Ready for Processing</label>
    <type>Checkbox</type>
</CustomField>