force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_Major__c.field-meta.xml
<CustomField>
    <fullName>HAM_Major__c</fullName>
    <description>Store the ID or text of the major we don&apos;t have one</description>
    <inlineHelpText>Store the ID or text of the major we don&apos;t have one</inlineHelpText>
    <label>Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>