force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_Minor__c.field-meta.xml
<CustomField>
    <fullName>HAM_Minor__c</fullName>
    <description>This stores the minor ID or the text if we don&apos;t have one specific</description>
    <inlineHelpText>This stores the minor ID or the text if we don&apos;t have one specific</inlineHelpText>
    <label>Minor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>