force-app/main/default/objects/HAM_HQ_Staging__c/fields/HAM_School__c.field-meta.xml
<CustomField>
    <fullName>HAM_School__c</fullName>
    <description>This is used to store the School (ID if directly found a school) else text for us to create one</description>
    <inlineHelpText>This is used to store the School (ID if directly found a school) else text for us to create one</inlineHelpText>
    <label>School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>