force-app/main/default/objects/HAM_HQ_Staging__c/recordTypes/Grad_School_Degree.recordType-meta.xml
<RecordType>
    <fullName>Grad_School_Degree</fullName>
    <active>true</active>
    <description>This is used to store the grad school related info</description>
    <label>Grad School Degree</label>
</RecordType>